starter working on the site header

--- a/index.html
+++ b/index.html
@@ -7,7 +7,45 @@
 
     <link rel="stylesheet" href="/src/css/style.css" />
   </head>
-  <body>
-    Hello world
+  <body class="wrapper">
+    <header class="header">
+      <div class="links">
+        <a href="" class="link">IN</a>
+        <a href="" class="link">CO</a>
+        <a href="" class="link">TE</a>
+      </div>
+
+      <div class="container">
+        <h1>
+          Hi! I’m David. I’m a software developer.
+        </h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eleifend nibh
+          magna vivamus massa mattis feugiat. Tristique id id eu amet sociis
+          fringilla adipiscing. Sed eget nulla eu ultricies at sit ut viverra.
+          Elementum risus amet, fames at pulvinar diam. Etiam est tincidunt in
+          dolor bibendum tincidunt.
+        </p>
+        <button><a href="" class="btn">Contact</a></button>
+      </div>
+    </header>
+
+    <main class="projects">
+      <div class="container">
+        Projects
+      </div>
+    </main>
+
+    <section class="about-me">
+      <div class="container">
+        About me
+      </div>
+    </section>
+
+    <footer class="footer">
+      <div class="container">
+        Footer
+      </div>
+    </footer>
   </body>
 </html>
