added rough outline of project section

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="/src/css/style.css" />
   </head>
-  <body class="wrapper">
+  <body class="container">
     <header class="header">
       <div class="links">
         <a href="" class="link">IN</a>
@@ -15,7 +15,7 @@
         <a href="" class="link">TE</a>
       </div>
 
-      <div class="container">
+      <div class="heading">
         <h1>
           Hi! I’m David. I’m a software developer.
         </h1>
@@ -31,21 +31,102 @@
     </header>
 
     <main class="projects">
-      <div class="container">
-        Projects
+      <h2>Recent projects</h2>
+
+      <div class="project">
+        <img
+          src="http://placehold.jp/800x600.png"
+          alt=""
+          class="project__img"
+        />
+        <div class="project__content">
+          <div class="project__info">
+            <h3>My app</h3>
+            <p class="project__para">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eleifend
+              nibh magna vivamus massa mattis feugiat. Tristique id id eu amet
+              sociis fringilla adipiscing. Sed eget nulla eu ultricies at sit ut
+              viverra.
+            </p>
+
+            <p class="text--small">React.js</p>
+            <p class="text--small">Node.js</p>
+
+            <div class="project__links">
+              <button><a href="" class="btn">Live preview</a></button>
+              <button>
+                <a href="" class="btn btn--hollow">Source code</a>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="project">
+        <img
+          src="http://placehold.jp/800x600.png"
+          alt=""
+          class="project__img"
+        />
+        <div class="project__content">
+          <div class="project__info">
+            <h3>My app</h3>
+            <p class="project__para">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eleifend
+              nibh magna vivamus massa mattis feugiat. Tristique id id eu amet
+              sociis fringilla adipiscing. Sed eget nulla eu ultricies at sit ut
+              viverra.
+            </p>
+
+            <p class="text--small">React.js</p>
+            <p class="text--small">Node.js</p>
+
+            <div class="project__links">
+              <button><a href="" class="btn">Live preview</a></button>
+              <button>
+                <a href="" class="btn btn--hollow">Source code</a>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="project">
+        <img
+          src="http://placehold.jp/800x600.png"
+          alt=""
+          class="project__img"
+        />
+        <div class="project__content">
+          <div class="project__info">
+            <h3>My app</h3>
+            <p class="project__para">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eleifend
+              nibh magna vivamus massa mattis feugiat. Tristique id id eu amet
+              sociis fringilla adipiscing. Sed eget nulla eu ultricies at sit ut
+              viverra.
+            </p>
+
+            <p class="text--small">React.js</p>
+            <p class="text--small">Node.js</p>
+
+            <div class="project__links">
+              <button><a href="" class="btn">Live preview</a></button>
+              <button>
+                <a href="" class="btn btn--hollow">Source code</a>
+              </button>
+            </div>
+          </div>
+        </div>
       </div>
     </main>
 
     <section class="about-me">
-      <div class="container">
-        About me
-      </div>
+      About me
     </section>
 
     <footer class="footer">
-      <div class="container">
-        Footer
-      </div>
+      Footer
     </footer>
   </body>
 </html>
