--- a/index.html
+++ b/index.html
@@ -6,13 +6,32 @@
     <title>David Carlsson</title>
 
     <link rel="stylesheet" href="/src/css/style.css" />
+    <script
+      src="https://kit.fontawesome.com/c31ede3f29.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body class="container">
     <header class="header">
-      <div class="links">
-        <a href="" class="link">IN</a>
-        <a href="" class="link">CO</a>
-        <a href="" class="link">TE</a>
+      <div class="social">
+        <a
+          href="https://github.com/carlssondavid"
+          target="_blank"
+          class="social__link"
+          ><i class="fab fa-github"></i
+        ></a>
+        <a
+          href="https://codepen.io/davidcarlsson"
+          class="social__link"
+          target="_blank"
+          ><i class="fab fa-codepen"></i
+        ></a>
+        <a
+          href="https://www.linkedin.com/in/david-carlsson-57b446158/"
+          class="social__link"
+          target="_blank"
+          ><i class="fab fa-linkedin"></i
+        ></a>
       </div>
 
       <div class="heading">
