added readme file

--- a/index.html
+++ b/index.html
@@ -60,16 +60,14 @@
         />
         <div class="project__content">
           <div class="project__info">
-            <h3>My app</h3>
+            <h3>Personal website</h3>
             <p class="project__para">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eleifend
-              nibh magna vivamus massa mattis feugiat. Tristique id id eu amet
-              sociis fringilla adipiscing. Sed eget nulla eu ultricies at sit ut
-              viverra.
+              Building this website taught be a alot about architecture and UI
+              design.
             </p>
 
-            <p class="text--small">React.js</p>
-            <p class="text--small">Node.js</p>
+            <p class="text--small">SCSS</p>
+            <p class="text--small">Vanilla js</p>
 
             <div class="project__links">
               <button><a href="" class="btn">Live preview</a></button>
